// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-jveewi gpoJqT"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-jveewi fUaJZS"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-jveewi RhtJk"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-jveewi lfkitO"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-jveewi foieSh"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-jveewi eJaKOi"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-jveewi gpoJqT"
  >
    Span tag
  </span>
  <label
    className="sc-jveewi gpoJqT"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-jveewi gQCjCE"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-jveewi fzBBKM"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-jveewi ggbjQY"
  >
    Centered Text
  </p>
  <p
    className="sc-jveewi cVHVPD"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-jveewi dZNXay"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-jveewi gpoJqT"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-jveewi ciKquM"
  >
    Uppercase Text
  </p>
</div>
`;
